fix sizing issue, stretch images sized in the container

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,6 @@
 
 .App {
   margin: 0 auto;
+  padding: 0 2rem;
   max-width: $pageMaxWidth;
-
-  .page-content {
-    padding-top: 4rem;
-  }
 }
